crates/compiler/semantic/tests/common/snapshots/diagnostics__expressions::type_errors::test_function_not_called_error.snap
---
source: crates/compiler/semantic/tests/common/mod.rs
description: "Inline semantic validation error test: expressions::type_errors::test_function_not_called_error"
---
Fixture: semantic_tests::expressions::type_errors::test_function_not_called_error
============================================================
Source code:

        fn get_value() -> felt {
            return 42;
        }

        fn test() {
            let x = get_value + 5;  // Should suggest adding parentheses
        }
    
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::expressions::type_errors::test_function_not_called_error:6:12 ]
   │
 6 │         fn test() {
   │            ──┬─  
   │              ╰─── Function 'test' doesn't return on all paths
───╯

--- Diagnostic 2 ---
[2001] Error: Operator `+` is not supported for type `function`
   ╭─[ semantic_tests::expressions::type_errors::test_function_not_called_error:7:21 ]
   │
 7 │             let x = get_value + 5;  // Should suggest adding parentheses
   │                     ────┬────  
   │                         ╰────── Operator `+` is not supported for type `function`
   │                         │      
   │                         ╰────── Did you forget to call the function with parentheses?
───╯
